--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
       {% endblock %}
     </main>
     <footer class="mt-auto text-white-50">
-      <p> © 2023 AMF <a href="https://github.com/armferreira?tab=repositories" class="text-white">@GitHub repository page</a></p>
+      <p> © 2023 AMF <a href="https://github.com/armferreira/Lets-Get-Cloud" class="text-white">@GitHub repository page</a></p>
     </footer>
   </body>
 </html>
